se crea funciones globales para limpiar codigo se optimiza ventas, productos,clientes, colaboradores y pendientes se crean hojas de estilo generales y unicas para cada vista